# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  tools.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
